--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <div class="latest_box">
                 <div class="latest_test"><h2 class="h_b_text_2 d_w_c">Get The Latest Deals</h2>
                 <p class="p_s_18 d_w_c">130 coupon for first shopping</p> </div>
-                <form class="input">
-                    <input type="email" name="email" id="email" class="h_name_service_b" placeholder="Enter your email here....">
-                    <input class="btn_prymary" type="submit" value="Subscribe">
+                <form class="input" action="" method="get">
+                    <input type="email" name="email" id="email" class="h_name_service_b" placeholder="Enter your email here...." required>
+                    <input class="btn_prymary" type="submit" value="Subscribe"> 
                 </form>
             </div>
         </section>
