responsiv for mobile

--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="./images/sale-0ff.png" type="image/x-icon">
+    <link rel="stylesheet" href="./responsive.css">
     <title>Flower-Shop</title>
 </head>
 <body>
     <header class="header">
         <div class="header_box">
-            <div class="header_text"><h1 class="h_b_text_1">Let's make beautiful flowers a part of your life.</h1>
+            <div class="header_text center"><h1 class="h_b_text_1">Let's make beautiful flowers a part of your life.</h1>
             <p class="p_18">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-            <div class="d_w"><button class="btn_prymary">Shop Now</button></div></div>
-            <div class="header_img"></div>
+            <div class="d_w center"><button class="btn_prymary">Shop Now</button></div>
+        </div>
+        <div class="header_img"></div>
         </div>
     </header>
     <main>
-        <section class="feature">
+        <section class="feature ">
             <div class="feature_text"><h2 class="h_b_text_2">Our Featured Flowers</h2>
             <p class="p_s_18">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> </div>
             <div class="feature_content">
@@ -72,18 +74,18 @@
                 <div class="instagram_item4"></div>
             </div>
         </section>
-        <section class="latest">
+        <section class="latest ">
             <div class="latest_box">
                 <div class="latest_test"><h2 class="h_b_text_2 d_w_c">Get The Latest Deals</h2>
                 <p class="p_s_18 d_w_c">130 coupon for first shopping</p> </div>
                 <form class="input" action="" method="get">
                     <input type="email" name="email" id="email" class="h_name_service_b" placeholder="Enter your email here...." required>
-                    <input class="btn_prymary" type="submit" value="Subscribe"> 
+                    <input class="btn_prymary_s" type="submit" value="Subscribe"> 
                 </form>
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer ">
         <div class="footer_box">
         <h2 class="h_b_text_2_w"><span class="off">Flower</span>Shop</h2>
         <p class="p_s_18_w d_w_c">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
